--- a/arch/arm/configs/mx4_v61_defconfig
+++ b/arch/arm/configs/mx4_v61_defconfig
@@ -146,6 +146,7 @@ CONFIG_REGULATOR_GPIO=y
 # CONFIG_USB_HID is not set
 CONFIG_USB=y
 CONFIG_USB_EHCI_HCD=y
+CONFIG_USB_ACM=y
 CONFIG_USB_STORAGE=y
 CONFIG_USB_CHIPIDEA=y
 CONFIG_USB_CHIPIDEA_UDC=y
