DTS: mx4_v61: fix polarity of low power input
Is active LOW.

--- a/arch/arm/boot/dts/vf-mx4-v61.dtsi
+++ b/arch/arm/boot/dts/vf-mx4-v61.dtsi
@@ -60,7 +60,7 @@
 
 		power {
 			label = "power off";
-			gpios = <&gpio2 24 GPIO_ACTIVE_HIGH>;
+			gpios = <&gpio2 24 GPIO_ACTIVE_LOW>;
 			linux,code = <KEY_POWER>;
 			debounce-interval = <10>;
 		};
