--- a/arch/arm/boot/dts/vf-mx4-v61.dtsi
+++ b/arch/arm/boot/dts/vf-mx4-v61.dtsi
@@ -97,8 +97,8 @@
        	spi-cpha;
    };
 
-    spidev1: dspi@1 {
-        compatible = "spidev";
+    mx4_pic: dspi@1 {
+        compatible = "host,mx4_pic";
         reg = <1>;
         spi-max-frequency = <50000000>;
     };
